# medialib

./: .dev.vars.example  .env.example  .gitignore  PLAN.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts  wrangler.jsonc
medialib/: config.py
medialib/adapters/: __init__.py  bandcamp.py  epub.py  musicbrainz.py  openlibrary.py  spotify.py  youtube.py
medialib/core/: artists.py  book_catalog.py  catalog.py  db.py  jobs.py  match.py  migrate.py  wrapped.py
medialib/web/: app.py
migrations/: 0001_initial_schema.sql  0002_media_list_fields.sql  0003_media_source_identity.sql  0004_source_kind_identity.sql  0005_external_ids_and_cover_backfill.sql  0006_live_shows.sql  0007_artist_type.sql  0008_track_artist_lookup.sql  0009_youtube_music_migration.sql  0010_unified_item_sources.sql  0011_youtube_source_sync.sql
public/: app.webmanifest  sw.js
public/assets/: app.css
scripts/: import-goodreads-export.mjs  import-mal-export.mjs  import-webtoon-list.mjs
src/: index.ts  live-shows.ts  r2.ts  types.ts  util.ts
src/bot/: telegram.ts
src/db/: library.ts  schema.ts
src/do/: legacy.ts  library.ts
src/enrich/: musicbrainz.ts  openlibrary.ts  visual.ts
src/ingest/: bandcamp.ts  classify.ts  extract.ts  goodreads.ts  index.ts  myanimelist.ts  spotify.ts  text.ts  types.ts  webtoon.ts  youtube.ts
src/migrate/: youtube.ts
src/sync/: youtube.ts
src/web/: pages.ts  (+1 more)
test/: book-enrichment.test.ts  bot.test.ts  env.d.ts  ingest.test.ts  library.test.ts  r2.test.ts  setup.ts  web-pages.test.ts
(+13 files in other folders)
