[project]
name = "medialib"
version = "0.1.0"
description = "Self-hosted music catalog manager across Spotify, YouTube Music, and Bandcamp"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "spotipy>=2.26",
    "ytmusicapi>=1.12",
    "rapidfuzz>=3.9",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "ebooklib>=0.20",
]

[tool.uv]
package = false
